[package]
name = "oliphaunt-wasix-tools"
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
description = "WASIX pg_dump and psql assets for oliphaunt-wasix"
repository = "https://github.com/f0rr0/oliphaunt"
homepage = "https://oliphaunt.dev"
documentation = "https://docs.rs/oliphaunt-wasix-tools"
license = "MIT AND PostgreSQL AND Unicode-3.0"
publish = false
links = "oliphaunt_artifact_oliphaunt_wasix_tools"
include = [
  "Cargo.toml",
  "build.rs",
  "README.md",
  "src/**",
  "payload/**",
  "LICENSE",
  "THIRD_PARTY_NOTICES.md",
  "THIRD_PARTY_NOTICES.oliphaunt-wasix.md",
  "THIRD_PARTY_LICENSES/PostgreSQL-COPYRIGHT",
  "THIRD_PARTY_LICENSES/ICU-LICENSE",
]

[package.metadata.oliphaunt-wasix-tools.assets]
pg-dump-wasix-sha256 = "6f3e92ba8a9faae2cf108a9d6e0f91e399e27d2f54c543297eaf5de63d511418"
psql-wasix-sha256 = "41c20c6c43ad437a732b0248efa173b5e0edcd2ab5bb4eee2752595201aa9db9"

[lib]
path = "src/lib.rs"

[build-dependencies]
sha2 = "0.10"
