[package]
name = "oliphaunt-wasix-aot-aarch64-unknown-linux-gnu"
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
description = "Internal Wasmer AOT artifacts for oliphaunt-wasix on aarch64-unknown-linux-gnu"
repository = "https://github.com/f0rr0/oliphaunt"
license = "MIT AND Apache-2.0 AND PostgreSQL"
publish = false
links = "oliphaunt_artifact_liboliphaunt_wasix_aot_linux_arm64_gnu"
include = ["Cargo.toml", "README.md", "build.rs", "src/**", "artifacts/**"]

[lib]
path = "src/lib.rs"

[build-dependencies]
serde_json = "1"
sha2 = "0.10"
