[package]
name = "oliphaunt-wasix-aot-x86_64-unknown-linux-gnu"
version = "0.7.0"
edition = "2024"
rust-version = "1.93"
description = "Internal Wasmer AOT artifacts for oliphaunt-wasix on x86_64-unknown-linux-gnu"
repository = "https://github.com/f0rr0/oliphaunt"
license = "MIT AND Apache-2.0 AND PostgreSQL"
publish = true
include = ["Cargo.toml", "README.md", "build.rs", "src/**", "artifacts/**"]

[lib]
path = "src/lib.rs"
