[package]
name = "oliphaunt-wasix-tools-aot-aarch64-apple-darwin"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Internal Wasmer AOT artifacts for oliphaunt-wasix tools on aarch64-apple-darwin"
repository = "https://github.com/f0rr0/oliphaunt"
license = "MIT AND Apache-2.0 AND PostgreSQL"
publish = false
links = "oliphaunt_artifact_oliphaunt_wasix_tools_aot_macos_arm64"
include = ["Cargo.toml", "README.md", "build.rs", "src/**", "artifacts/**"]

[lib]
path = "src/lib.rs"

[build-dependencies]
serde_json = "1"
sha2 = "0.10"
